--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,6 @@ jobs:
         uses: dailydotdev/action-devcard@2.0.2
         with:
           devcard_id: ${{ secrets.DEVCARD_ID }}
+      
+      - name: generate-snake-game-from-github-contribution-grid
+        uses: Platane/snk@v2.0.0-rc.2
