--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: DevCard
+name: Main
 
 on:
   workflow_dispatch:
@@ -17,5 +17,11 @@ jobs:
         with:
           devcard_id: ${{ secrets.DEVCARD_ID }}
       
-      - name: generate-snake-game-from-github-contribution-grid
-        uses: Platane/snk@v2.0.0-rc.2
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v2
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
